Fixed nav colors, desc margin, li spacing

--- a/about.css
+++ b/about.css
@@ -166,6 +166,7 @@ main {
     font-size: 1.2rem;
     line-height: 2rem;
     word-spacing: .3rem;
+    margin-top: 1rem;
 }
 
 .about-me {
