--- a/style.css
+++ b/style.css
@@ -74,9 +74,7 @@ nav {
 
 .logo h4 {
     font-weight: 300;
-    background: white;
-    color: transparent;
-    background-clip: text;
+    color: white;
 }
 
 nav h3 {
@@ -86,13 +84,6 @@ nav h3 {
     border-radius: 15px;
     font-weight: 400;
     cursor: pointer;
-}
-
-nav h3:hover {
-    background: linear-gradient(to left, navy, white);
-    background-clip: text;
-    color: transparent;
-    transition: all 0.5s;
 }
 
 ul {
@@ -112,10 +103,9 @@ a {
 }
 
 a:hover {
-    color: transparent;   
-    background: linear-gradient(to left, navy, white);
-    background-clip: text;
+    color: gray;   
     transition: all 0.3s;
+    text-decoration: underline;
 }
 
 main {
@@ -131,7 +121,6 @@ main {
     flex-flow: column wrap;
     width: 50%;
     padding: 8rem;
-    margin-top: 10rem;
 }
 
 .desc h1 {
